# llm-connector

./: .env  .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEEPSEEK_INTEGRATION.md  FIXES_SUMMARY.md  LICENSE  Makefile  README.md  README.zh-CN.md  RELEASE_NOTES_0.5.8.md  RELEASE_NOTES_v0.2.3.md  ROADMAP.md  RULES.md  keys.yaml.example  keys_with_protocols.yaml
.augment/rules/: rust.md
.github/workflows/: ci.yml
.zed/: settings.json
docs/: ALIYUN_ENABLE_THINKING.md  ALIYUN_FIXES_SUMMARY.md  ALIYUN_RESPONSE_VERIFICATION.md  ALIYUN_TOOLS_FIX_ANALYSIS.md  ALIYUN_TOOLS_IMPLEMENTATION_SUMMARY.md  ANTHROPIC_STREAMING_FIX.md  ANTHROPIC_STREAMING_STATUS.md  ANTHROPIC_STREAMING_TEST_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  CHATRESPONSE_DESIGN_ANALYSIS.md  CHINESE_CLEANUP_STATUS.md  CHINESE_TO_ENGLISH_CONVERSION.md  CODE_COMMENTS_TRANSLATION.md  COMPLETE_CHINESE_CLEANUP_FINAL.md  COMPLETE_TRANSLATION_AND_CLEANUP.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCS_CLEANUP_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  EMOJI_AND_CHINESE_CLEANUP.md  EXAMPLES_AND_TESTS_REVIEW.md  EXAMPLES_CLEANUP_PLAN.md  FINAL_DOCUMENTATION_CLEANUP.md  FIX_DUPLICATE_CONTENT_TYPE_HEADER.md  GITHUB_RELEASE_TEMPLATE.md  GITHUB_UPLOAD_SUMMARY.md  LONGCAT_SUPPORT.md  LONGCAT_TESTING_REPORT.md  MIGRATION.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_v0.5.0.md  MOONSHOT_GUIDE.md  MULTIMODAL.md  MULTIMODAL_CONTENT_DESIGN.md  MULTIMODAL_MIGRATION_PLAN.md  MULTIMODAL_NATIVE_DESIGN.md  OPENAI_STREAM.md  PARAMETER_MAPPING.md  (+54 more)
docs/archive/releases/: RELEASE_CHECKLIST_v0.5.4.md  RELEASE_v0.4.18.md  RELEASE_v0.5.0.md  RELEASE_v0.5.3.md  RELEASE_v0.5.3_SUMMARY.md
docs/archive/reports/: LONGCAT_TESTING_REPORT.md  SENSITIVE_INFO_OBFUSCATION.md  TEST_REPORT.md  V0.5.0_FINAL_REPORT.md  V0.5.0_VERIFICATION_REPORT.md
docs/guides/: ALIYUN_GUIDE.md  ANTHROPIC_GUIDE.md  DEEPSEEK_GUIDE.md  TENCENT_GUIDE.md  VOLCENGINE_GUIDE.md  ZHIPU_GUIDE.md
docs/specs/: API.md  CONFIG_SCHEMA.md  ERRORS.md  PROVIDER_EXTENSION.md
examples/: README.en.md  README.md  README_HUNYUAN_NATIVE.md  adapter_pattern_demo.rs  aliyun.rs  aliyun_basic.rs  aliyun_thinking.rs  anthropic.rs  anthropic_streaming.rs  check_reasoning_formats.rs  debug_aliyun_response.rs  debug_deepseek.rs  debug_longcat_anthropic_stream.rs  debug_longcat_stream.rs  debug_ollama.rs  debug_raw_ollama.rs  debug_word_by_word.rs  debug_zhipu_streaming.rs  debug_zhipu_streaming_tool_calls.rs  deepseek.rs  deepseek_example.rs  dynamic_routing.rs  enhanced_error_handling.rs  fetch_models_simple.rs  file_upload.rs  get_latest_models.rs  google.rs  google_basic.rs  google_streaming.rs  google_tools_thinking.rs  hunyuan_basic.rs  hunyuan_native_basic.rs  hunyuan_native_streaming.rs  hunyuan_streaming.rs  inspect_deepseek_request.rs  list_google_models.rs  list_providers.rs  longcat_anthropic.rs  longcat_demo.rs  longcat_dual.rs  (+93 more)
scripts/: aliyun_tools.rs  fix_all_chinese.sh  fix_examples.sh  fix_final_chinese.sh  fix_last_chinese.sh  fix_message_construction.py  fix_remaining_chinese.sh  minimax_tools.rs  release.sh  release_v0.5.0.sh  run_gateway_test.sh  run_provider_example_no_proxy.sh  tencent_test.rs  test_volcengine_streaming.sh  translate_comments.sh  translate_rust_comments.py  verify_direct_vendors.sh  verify_via_unigateway.sh  version_sync.sh
src/: builder.rs  client.rs  config.rs  endpoints.rs  error.rs  lib.rs  ollama.rs  registry.rs  sse.rs
src/config/: loader.rs  mod.rs  provider.rs
src/core/: builder.rs  client.rs  configurable.rs  error.rs  http.rs  mod.rs  provider.rs  resolver.rs  traits.rs
src/middleware/: interceptor.rs  logging.rs  metrics.rs  mod.rs  retry.rs
src/protocols/: aliyun.rs  anthropic.rs  core.rs  factory.rs  google.rs  hunyuan_native.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  tencent.rs  tencent_native.rs  utils.rs  zhipu.rs
src/protocols/adapters/: mod.rs  tencent.rs
src/protocols/aliyun/: mod.rs
src/protocols/anthropic/: mod.rs
src/protocols/common/: auth.rs  capabilities.rs  mod.rs  openai.rs  openai_compatible.rs  request.rs  streamers.rs  thinking.rs  transport.rs
src/protocols/formats/: chat_completions.rs
src/protocols/google/: mod.rs
src/protocols/ollama/: mod.rs
src/protocols/openai/: mod.rs
src/protocols/zhipu/: mod.rs
src/providers/: adapters.rs  aliyun.rs  anthropic.rs  base.rs  config.rs  deepseek.rs  errors.rs  generic.rs  google.rs  longcat.rs  macros.rs  mock.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  parser.rs  registry.rs  tencent.rs  traits.rs  transport.rs  volcengine.rs  xiaomi.rs  zhipu.rs
src/providers/common/: adapter.rs  mod.rs  (+3 more)
src/registry/: mod.rs  provider_registry.rs
src/types/: embedding.rs  message_block.rs  mod.rs  request.rs  response.rs  responses.rs  streaming.rs
src/utils/: mod.rs
src/v1/: client.rs  mod.rs  ollama.rs
tests/: advanced_resolver_tests.rs  architecture_tests.rs  client_tests.rs  dx_tests.rs  embed_test.rs  error_tests.rs  error_unit.rs  integration_test.rs  openai_protocol_tests.rs  protocol_mapping.rs  protocol_provider_tests.rs  protocol_tests.rs  resolver_tests.rs  responses_api.rs  streaming_integration_tests.rs  streaming_logic.rs  test_adapter_pattern.rs  test_aliyun_response_format.sh  test_aliyun_streaming_format.sh  test_deepseek_connection.rs  test_deepseek_real.rs  test_longcat_anthropic_raw.sh  test_longcat_anthropic_streaming_raw.sh  test_providers_e2e.rs  test_registry_config.rs  test_streaming_tool_calls.rs  test_tencent_raw.sh  test_tencent_streaming_raw.sh  test_volcengine_raw.sh  test_volcengine_streaming_raw.sh  test_zhipu_streaming_direct.sh  thinking_tests.rs  types_tests.rs  types_unit.rs
tests/common/: mock_server.rs  mod.rs
www/: DEPLOYMENT.md  index.md  package-lock.json  package.json
www/.vitepress/: config.mts
www/dev/: index.md
www/examples/: index.md
www/guide/: api-comparison-and-adaptation-plan.md  architecture.md  contributing.md  getting-started.md  migration.md  multimodal.md  openai-responses-api-analysis-and-plan.md  providers.md  streaming.md  tools.md
(+22 files in other folders)
