[package]
name = "llm-connector"
version = "0.4.9"
edition = "2021"
authors = ["lipi"]
description = "Next-generation Rust library for LLM protocol abstraction. V2 architecture with 7000x+ performance boost. Supports 5 protocols (OpenAI, Anthropic, Aliyun, Zhipu, Ollama) with clean Protocol/Provider separation, type-safe interface, and universal streaming."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lipish/llm-connector"
keywords = ["llm", "ai", "protocol", "openai", "anthropic"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "llm_connector"
path = "src/lib.rs"

[features]
default = ["reqwest"]
# HTTP client support
reqwest = ["dep:reqwest", "dep:tokio", "dep:futures-util", "dep:bytes"]
# Streaming support
streaming = ["reqwest", "dep:pin-project-lite"]
# Configuration support
config = ["dep:serde_yaml"]
# YAML configuration support
yaml = ["config", "dep:serde_yaml"]
# TOML configuration support (placeholder for future use)
toml = ["config"]
# Tencent Cloud API support
tencent = ["reqwest", "dep:sha2", "dep:hmac", "dep:hex"]

# 架构版本控制
v1-legacy = []  # V1架构 (传统架构，用于向后兼容)
# V2架构现在是默认架构，不需要特性标志

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core dependencies
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"
log = "0.4"

# HTTP client (optional)
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
tokio = { version = "1.0", features = ["rt"], optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1.0", optional = true }

# Streaming utilities (optional)
pin-project-lite = { version = "0.2", optional = true }

# Configuration (optional)
serde_yaml = { version = "0.9", optional = true }

# Cryptography for Tencent Cloud API V3 signature (optional)
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }



[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
wiremock = "0.6"
serde_yaml = "0.9"
