[package]
name = "llm-connector"
version = "0.5.13"
edition = "2024"
authors = ["lipi"]
description = "Next-generation Rust library for LLM protocol abstraction with native multi-modal support. Supports 11+ providers (OpenAI, Anthropic, Google, Aliyun, Zhipu, Ollama, Tencent, Volcengine, LongCat, Moonshot, DeepSeek) with clean Protocol/Provider separation, type-safe interface, and universal streaming."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lipish/llm-connector"
keywords = ["llm", "ai", "protocol", "openai", "anthropic"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "llm_connector"
path = "src/lib.rs"

[features]
default = ["reqwest"]
# HTTP client support
reqwest = ["dep:reqwest", "dep:tokio", "dep:futures-util", "dep:bytes"]
# Streaming support
streaming = ["reqwest/stream", "dep:pin-project-lite"]
# Configuration support
config = ["dep:serde_yaml"]
# YAML configuration support
yaml = ["config", "dep:serde_yaml"]
# TOML configuration support (placeholder for future use)
toml = ["config"]
# Tencent Cloud API support
tencent = ["reqwest", "dep:sha2", "dep:hmac", "dep:hex"]

[dependencies]
base64 = "0.22.1"

# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core dependencies
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# HTTP client (optional)
tokio = { version = "1.0", features = ["rt"], optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1.0", optional = true }

# Streaming utilities (optional)
pin-project-lite = { version = "0.2", optional = true }

# Configuration (optional)
serde_yaml = { version = "0.9", optional = true }

# Cryptography for Tencent Cloud API V3 signature (optional)
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["http2", "json", "native-tls"]
optional = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_yaml = "0.9"
