[package]
name = "llm-connector"
version = "0.6.0"
edition = "2024"
authors = ["lipi"]
description = "Next-generation Rust library for LLM protocol abstraction with native multi-modal support. Supports 12+ providers (OpenAI, Anthropic, Google, Aliyun, Zhipu, Ollama, Tencent, Volcengine, LongCat, Moonshot, DeepSeek, Xiaomi) with clean Protocol/Provider separation, type-safe interface, and universal streaming."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lipish/llm-connector"
keywords = ["llm", "ai", "protocol", "openai", "anthropic"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "llm_connector"
path = "src/lib.rs"

[features]
default = ["reqwest", "streaming"]
# HTTP client support
reqwest = ["dep:reqwest", "dep:tokio", "dep:futures-util", "dep:bytes"]
# Streaming support
streaming = ["reqwest", "dep:pin-project-lite"]
# Configuration support
config = ["dep:serde_yaml"]
# YAML configuration support
yaml = ["config", "dep:serde_yaml"]
# TOML configuration support (placeholder for future use)
toml = ["config"]
# Tencent Cloud API support
tencent = ["reqwest", "dep:sha2", "dep:hmac", "dep:hex"]

[dependencies]
# Core serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Core dependencies
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"

# HTTP client (optional)
tokio = { version = "1.49.0", features = ["rt"], optional = true }
futures-util = { version = "0.3.31", optional = true }
bytes = { version = "1.11.1", optional = true }

# Streaming utilities (optional)
pin-project-lite = { version = "0.2.16", optional = true }

# Configuration (optional)
serde_yaml = { version = "0.9.34+deprecated", optional = true }

# Cryptography for Tencent Cloud API V3 signature (optional)
sha2 = { version = "0.11.0-rc.5", optional = true }
hmac = { version = "0.13.0-rc.5", optional = true }
hex = { version = "0.4.3", optional = true }

[dependencies.reqwest]
version = "0.13.2"
default-features = false
features = ["json", "native-tls", "stream"]
optional = true

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde_yaml = "0.9.34+deprecated"
